[gd_scene load_steps=10 format=2]

[ext_resource path="res://World/Fireball.png" type="Texture" id=1]
[ext_resource path="res://World/Fireball.gd" type="Script" id=2]
[ext_resource path="res://Effects/FireballEffect.png" type="Texture" id=3]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 12.2857

[sub_resource type="CircleShape2D" id=5]
radius = 13.3531

[node name="Fireball" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.841846, -11.9262 )
rotation = 1.5708
texture = ExtResource( 1 )
centered = false
offset = Vector2( -4, -26 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.841846, -11.9262 )
frames = SubResource( 3 )
centered = false
offset = Vector2( -4, -2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 13.052, -0.0795612 )
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0.841846, -11.9262 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 12.193, 12.193 )
shape = SubResource( 5 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]

[editable path="Hurtbox"]
